# ditto

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cargo-llvm-cov-cargo-lock.patch  codecov.yml  lint-staged.config.js  nixpkgs.nix  package-lock.json  package.json  renovate.json  rust-toolchain.toml  shell-nixpkgs.nix  shell.nix  stack.yaml  treefmt.toml
crates/ditto-ast/: Cargo.toml  README.md
crates/ditto-ast/src/: expression.rs  graph.rs  kind.rs  lib.rs  module.rs  name.rs  pattern.rs  type.rs  utils.rs  var.rs
crates/ditto-benchmarks/: Cargo.toml
crates/ditto-benchmarks/benches/: vdom-html.rs
crates/ditto-benchmarks/benches/common/: mod.rs
crates/ditto-benchmarks/benches/vdom-html/: Attributes.ast-exports  source.ditto
crates/ditto-benchmarks/src/: lib.rs
crates/ditto-checker/: Cargo.toml  README.md
crates/ditto-checker/golden-tests/type-errors/: argument_length_mismatch_0.ditto  argument_length_mismatch_0.error  argument_length_mismatch_1.ditto  argument_length_mismatch_1.error  argument_length_mismatch_2.ditto  argument_length_mismatch_2.error  argument_length_mismatch_3.ditto  argument_length_mismatch_3.error  duplicate_function_binder.ditto  duplicate_function_binder.error  duplicate_import_module_0.ditto  duplicate_import_module_0.error  duplicate_import_module_1.error  duplicate_pattern_binder.ditto  duplicate_pattern_binder.error  duplicate_type_declaration.error  duplicate_type_declaration_variable.error  effect_unification_error_0.ditto  effect_unification_error_0.error  infinite_type.ditto  infinite_type.error  kind_unification_error_1.ditto  kind_unification_error_1.error  match_not_exhaustive_0.ditto  match_not_exhaustive_0.error  match_not_exhaustive_1.ditto  match_not_exhaustive_1.error  match_unification_error_0.ditto  match_unification_error_0.error  match_unification_error_1.ditto  match_unification_error_1.error  match_unification_error_2.ditto  match_unification_error_2.error  match_unification_error_3.ditto  match_unification_error_3.error  match_unification_error_4.ditto  match_unification_error_4.error  match_unification_error_5.ditto  match_unification_error_5.error  match_unification_error_6.ditto  (+39 more)
crates/ditto-checker/golden-tests/warnings/: duplicate_type_export.warnings  duplicate_type_import.ditto  duplicate_value_export.ditto  duplicate_value_export.warnings  duplicate_value_import.ditto  redundant_pattern_0.ditto  redundant_pattern_0.warnings  redundant_pattern_1.ditto  redundant_pattern_1.warnings  redundant_patterns.ditto  redundant_patterns.warnings  unused_effect_binder.ditto  unused_effect_binder.warnings  unused_foreign_value.ditto  unused_foreign_value.warnings  unused_function_binder.ditto  unused_function_binder.warnings  unused_import.warnings  unused_pattern_binder.ditto  unused_pattern_binder.warnings  (+1 more)
crates/ditto-checker/src/: collections.rs  lib.rs  supply.rs
crates/ditto-checker/tests/: common.rs  golden_error_tests.rs  golden_warning_tests.rs  trycmd_tests.rs
crates/ditto-cli/: Cargo.toml  README.md  build.rs
crates/ditto-cli/fixtures/: .ignore
crates/ditto-cli/src/: bootstrap.rs  common.rs  fmt.rs  lsp.rs  main.rs  make.rs  ninja.rs  pkg.rs  spinner.rs  version.rs
crates/ditto-cli/tests/: bootstrap_tests.rs  common.rs  make_tests.rs  pkg_tests.rs  trycmd_tests.rs
crates/ditto-codegen-js/: Cargo.toml  README.md
crates/ditto-codegen-js/src/: ast.rs  convert.rs  lib.rs  render.rs  ts.rs
crates/ditto-codegen-js/tests/: golden_tests.rs  node_execution_test.rs  node_execution_tests.rs
crates/ditto-config/: Cargo.toml  README.md
crates/ditto-config/src/: lib.rs  package_set.rs  tests.rs
crates/ditto-config/tests/: golden_tests.rs
crates/ditto-cst/: Cargo.toml  README.md
crates/ditto-cst/benches/: expressions.rs
crates/ditto-cst/src/: ditto.lalrpop  expression.rs  get_span.rs  lexer.rs  lib.rs  module.rs  name.rs  syntax.rs  token.rs  type.rs
crates/ditto-cst/tests/: golden_tests.rs
crates/ditto-doc/: Cargo.toml  README.md
crates/ditto-doc/golden-tests/: ditto.css  kitchen_sink.ditto  kitchen_sink.html  styles.css
crates/ditto-doc/src/: lib.rs
crates/ditto-fmt/: Cargo.toml  README.md
crates/ditto-fmt/golden-tests/: effect_expressions.ditto  empty_module.ditto  empty_module_with_trailing_comments.ditto  if_then_else.ditto  kitchen_sink.ditto  match_expressions.ditto  newtypes.ditto  type_aliases.ditto  type_declarations.ditto  value_declarations.ditto
crates/ditto-fmt/src/: config.rs  declaration.rs  expression.rs  has_comments.rs  helpers.rs  lib.rs  module.rs  name.rs  syntax.rs  token.rs  type.rs
crates/ditto-fmt/tests/: golden_tests.rs
crates/ditto-highlight/: Cargo.toml
crates/ditto-highlight/src/: lib.rs
crates/ditto-highlight/tests/: golden_tests.rs
crates/ditto-lsp/: Cargo.toml  README.md
crates/ditto-lsp/fixtures/: .gitignore
crates/ditto-lsp/lsp-test/: Main.hs  ditto-lsp-test.cabal
crates/ditto-lsp/src/: common.rs  db.rs  goto_definition.rs  hover.rs  lib.rs  locate.rs  main.rs  semantic_tokens.rs  test.rs
crates/ditto-lsp/tests/: lsp_test.rs
crates/ditto-make/: Cargo.toml  README.md
crates/ditto-make/src/: build_ninja.rs  common.rs  compile.rs  lib.rs  utils.rs
crates/ditto-make/tests/: build_planning_tests.rs  trycmd_tests.rs
crates/ditto-pattern-checker/: Cargo.toml
crates/ditto-pattern-checker/benches/: bench.rs
crates/ditto-pattern-checker/src/: constructor.rs  env_constructors.rs  error.rs  lib.rs  patterns.rs  substitution.rs  supply.rs  tests.rs
crates/ditto-tree-sitter/: Cargo.toml  README.md
crates/ditto-tree-sitter/src/: lib.rs
crates/ditto-tree-sitter/tests/: parsing_tests.rs
crates/ditto-type-checker/: Cargo.toml  README.md
crates/ditto-type-checker/src/: ast.rs  check.rs  constraint.rs  env.rs  error.rs  infer.rs  lib.rs  outputs.rs  result.rs  scheme.rs  state.rs  substitution.rs  supply.rs  tests.rs  typecheck.rs  unify.rs  warning.rs
crates/ditto-typechecker/: Cargo.toml
crates/ditto-typechecker/src/: ast.rs  env.rs  infer.rs  lib.rs  scheme.rs  state.rs  substitution.rs  supply.rs
(+813 files in other folders)
