[package]
name = "ditto-ast"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[lib]
doctest = false

[dependencies]
ditto-cst = { path = "../ditto-cst" }
serde = { version = "1.0", features = ["derive"] }
petgraph = "0.6"
nonempty = { version = "0.8", features = ["serialize"] }
indexmap = { version = "1.9", features = ["serde"] }
smol_str = "0.1"
#unindent = "xx"  <-- might come in useful for smart multi-line strings (like Nix)
