[package]
name = "ditto-ast"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[lib]
doctest = false

[dependencies]
ditto-cst = { path = "../ditto-cst" }
serde = { version = "=1.0.147", features = ["derive"] }
petgraph = "=0.6.2"
non-empty-vec = { version = "=0.2.3", features = ["serde"] }
indexmap = { version = "=1.9.2", features = ["serde"] }
#unindent = "xx"  <-- might come in useful for smart multi-line strings (like Nix)
