[package]
name = "ditto-checker"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[lib]
doctest = false

[dependencies]
ditto-cst = { path = "../ditto-cst" }
ditto-ast = { path = "../ditto-ast" }
non-empty-vec = "0.2"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
miette = { version = "4.3", features = ["fancy"] }
thiserror = "1.0"
simsearch = "0.2"

[dev-dependencies]
snapshot-test = { path = "../snapshot-test" }
similar-asserts = "1.2"
serde_json = "1.0"
