[package]
name = "ditto-checker"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[lib]
doctest = false

[dependencies]
ditto-cst = { path = "../ditto-cst" }
ditto-ast = { path = "../ditto-ast" }
non-empty-vec = "=0.2.3"
lazy_static = "=1.4.0"
serde = { version = "=1.0.147", features = ["derive"] }
miette = { version = "=5.5.0", features = ["fancy"] }
thiserror = "=1.0.38"
simsearch = "=0.2.3"
indexmap = "=1.9.2"
serde_json = "=1.0.87"

[dev-dependencies]
similar-asserts = "=1.4.2"
serde_json = "=1.0.87"
trycmd = "=0.14.0"
datatest-stable = "=0.1.3"

[[test]]
name = "golden_warning_tests"
harness = false

[[test]]
name = "golden_error_tests"
harness = false