[package]
name = "ditto-cli"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[[bin]]
name = "ditto"       # defaults to `ditto-cli`
path = "src/main.rs"

[dependencies]
ditto-make = { path = "../ditto-make" }
ditto-lsp = { path = "../ditto-lsp" }
ditto-ast = { path = "../ditto-ast" }
ditto-cst = { path = "../ditto-cst" }
ditto-config = { path = "../ditto-config" }
ditto-fmt = { path = "../ditto-fmt" }
clap = "4.0"
time = "0.3"
miette = { version = "5.5", features = ["fancy"] }
log = "0.4"
toml = "0.5"
flexi_logger = "0.24"
# https://github.com/notify-rs/notify/issues/249
notify = "5.0.0"
clearscreen = "1.0"
symlink = "0.1.0"
tokio = { version = "1.22", features = ["full"] }
dirs = "4.0"
tempfile = "3.3"
convert_case = "0.6"
reqwest = { version = "0.11", features = ["stream"] }
zip = { version = "0.6", default-features = false, features = [
  # don't want the `time` feature
  "deflate",
] }
indicatif = "0.17"
futures-util = "0.3"
console = "0.15"
serde = "1.0"
serde_json = "1.0"
pathdiff = "0.2"
fs2 = "0.4"
atty = "0.2"
semver = "1.0"
shlex = "1.1"
crossbeam-channel = "0.5"

[dev-dependencies]
assert_cmd = "2.0"
trycmd = "0.14"
walkdir = "2.3"
predicates = "2.1"
assert_fs = "1.0"
similar-asserts = "1.4"

[build-dependencies]
time = "0.3"
