[package]
name = "ditto-codegen-js"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[lib]
doctest = false

[dependencies]
ditto-ast = { path = "../ditto-ast" }
lazy_static = "1.4"
egg = "0.8"
indexmap = "1.8"

[dev-dependencies]
ditto-checker = { path = "../ditto-checker" }
ditto-cst = { path = "../ditto-cst" }
non-empty-vec = { version = "0.2" }
snapshot-test = { path = "../snapshot-test" }
similar-asserts = "1.4"
quickcheck = "1.0"
