[package]
name = "ditto-codegen-js"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[lib]
doctest = false

[dependencies]
ditto-ast = { path = "../ditto-ast" }
lazy_static = "1.4"
egg = "0.9"
indexmap = "1.9"

[dev-dependencies]
ditto-checker = { path = "../ditto-checker" }
ditto-cst = { path = "../ditto-cst" }
non-empty-vec = { version = "0.2" }
similar-asserts = "1.5"
quickcheck = "1.0"
datatest-stable = "0.1"
path-slash = "0.2"

[[test]]
name = "golden_tests"
harness = false

[[test]]
name = "node_execution_tests"
harness = false

[features]
wasm-bindgen = ["egg/wasm-bindgen"]