[package]
name = "ditto-codegen-js"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[lib]
doctest = false

[dependencies]
ditto-ast = { path = "../ditto-ast" }
lazy_static = "=1.4.0"
egg = "=0.9.1"
indexmap = "=1.9.2"

[dev-dependencies]
ditto-checker = { path = "../ditto-checker" }
ditto-cst = { path = "../ditto-cst" }
non-empty-vec = { version = "=0.2.3" }
similar-asserts = "=1.4.2"
quickcheck = "=1.0.3"
datatest-stable = "=0.1.3"
path-slash = "=0.2.1"

[[test]]
name = "golden_tests"
harness = false

[[test]]
name = "node_execution_tests"
harness = false

[features]
wasm-bindgen = ["egg/wasm-bindgen"]