[package]
name = "ditto-config"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[lib]
doctest = false

[dependencies]
toml = "0.5"
miette = { version = "4.2", features = ["fancy"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = { version = "1.0", features = ["serde"] }
regex = "1.5"
lazy_static = "1.4"
validated_newtype = "0.1"

[dev-dependencies]
snapshot-test = { path = "../snapshot-test" }
similar-asserts = "1.2"
