[package]
name = "ditto-config"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[lib]
doctest = false

[dependencies]
toml = "=0.5.9"
miette = { version = "=5.5.0", features = ["fancy"] }
thiserror = "=1.0.38"
serde = { version = "=1.0.147", features = ["derive"] }
serde_json = "=1.0.87"
semver = { version = "=1.0.14", features = ["serde"] }
regex = "=1.7.0"
lazy_static = "=1.4.0"
validated_newtype = "=0.1.1"

[dev-dependencies]
similar-asserts = "=1.4.2"
datatest-stable = "=0.1.3"

[[test]]
name = "golden_tests"
harness = false