[package]
name = "ditto-cst"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[lib]
doctest = false

[dependencies]
itertools = "=0.10.5"
serde = { version = "=1.0.147", features = ["derive"] }
miette = { version = "=5.5.0", features = ["fancy"] }
thiserror = "=1.0.38"
lalrpop-util = "=0.19.8"
regex = "=1.7.0"
logos = "=0.12.1"
#simsearch = "xx"   <-- for suggestions
#unindent = "xx"  <-- might come in useful for smart multi-line strings (like Nix)
#codespan = "xx" <-- might be a good replacement for our `Span` type

[dev-dependencies]
similar-asserts = "=1.4.2"
datatest-stable = "=0.1.3"

[build-dependencies]
lalrpop = "=0.19.8"

[[test]]
name = "golden_tests"
harness = false