[package]
name = "ditto-doc"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[lib]
doctest = false

[dependencies]
ditto-ast = { path = "../ditto-ast" }
pulldown-cmark = "0.9"
unindent = "0.1"
html-escape = "0.2" # possibly not needed cos of the below
html-builder = "0.3"

[dev-dependencies]
ditto-cst = { path = "../ditto-cst" }
ditto-checker = { path = "../ditto-checker" }
snapshot-test = { path = "../snapshot-test" }
similar-asserts = "1.2"
