[package]
name = "ditto-fmt"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[lib]
doctest = false

[dependencies]
ditto-cst = { path = "../ditto-cst" }
dprint-core = "0.54"

[dev-dependencies]
similar-asserts = "1.4"
datatest-stable = "0.1"

[[test]]
name = "golden_tests"
harness = false