[package]
name = "ditto-fmt"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[lib]
doctest = false

[dependencies]
ditto-cst = { path = "../ditto-cst" }
dprint-core = "=0.60.0"
similar = "=2.2.0"

[dev-dependencies]
similar-asserts = "=1.4.2"
datatest-stable = "=0.1.3"

[[test]]
name = "golden_tests"
harness = false