[package]
name = "ditto-lsp"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[lib]
doctest = false

[dependencies]
lsp-server = "0.5"
lsp-types = "0.93"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
miette = { version = "4.7" }
tree-sitter-ditto = { git = "https://github.com/ditto-lang/tree-sitter-ditto", rev = "a0588121f9be33e8220a2779efa299f5e24dd79f" }
tree-sitter = "0.20"
url = "2.3"
ditto-cst = { path = "../ditto-cst" }
ditto-fmt = { path = "../ditto-fmt" }
ropey = "1.5"
#salsa = "xx"

[dev-dependencies]
log = { version = "0.4", features = ["std"] }
