[package]
name = "ditto-lsp"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[lib]
doctest = false

[dependencies]
lsp-server = "0.7"
lsp-types = "0.93"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
tracing = "0.1"
miette = { version = "5.5" }
url = "2.3"
ditto-cst = { path = "../ditto-cst" }
ditto-fmt = { path = "../ditto-fmt" }
ditto-tree-sitter = { path = "../ditto-tree-sitter" }
ditto-highlight = { path = "../ditto-highlight" }
ropey = "1.5"
#salsa = "xx"

[dev-dependencies]
log = { version = "0.4", features = ["std"] }
