[package]
name = "ditto-tree-sitter"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

[lib]
doctest = false

[dependencies]
tree-sitter = "0.20"
tree-sitter-ditto = { git = "https://github.com/ditto-lang/tree-sitter-ditto", rev = "9522591cb90540632d758a0e589e43b47a43b4d7" }

[dev-dependencies]
datatest-stable = "0.1"

[[test]]
name = "parsing_tests"
harness = false
